syntax = "proto3";

package auth.v1;

import "user/v1/user.proto";

service AuthService {
    rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse);
    rpc Reauthorize(ReauthorizeRequest) returns (ReauthorizeResponse);
    rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
}

message Auth {
    string access_token = 1;
    string refresh_token = 2;
    user.v1.User user = 3;
}

message AuthorizeRequest {
    string user_id = 1;
    string password = 2;
}

message AuthorizeResponse {
    Auth auth = 1;
}

message ReauthorizeRequest {
    string refresh_token = 2;
}

message ReauthorizeResponse {
    Auth auth = 1;
}

message UpdatePasswordRequest {
    string old_password = 2;
    string new_password = 3;
}

message UpdatePasswordResponse {}
